--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "uuid": "^8.3.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
